# deepseek_ai_ida_plugin

./: CMakeLists.txt  FunctionRenamerDeepseekAI.sln  IDA_Plugins.sln  README.md  readme.md
FunctionRenamerDeepseekAI/: CMakeLists.txt  DeepSeekAI.hpp  EventCallBack.cpp  FunctionRenamerDeepseekAI.cpp  FunctionRenamerDeepseekAI.vcxproj  FunctionRenamerDeepseekAI.vcxproj.filters  FunctionUtility.hpp  FunctionUtilityHexRay.hpp  Header.h  OptimizationXOR.cpp  QwenAI.hpp  README.md  StringUtils.hpp
FunctionRenamerDeepseekAI/libs/: ida.lib  libcurl-d.lib
